<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->
<resources>
    <string name="app_name">TiltSpot</string>

    <!-- Text view labels for orientation data -->
    <string name="label_Ax">X: %1$.2f m/s^2</string>
    <string name="label_Ay">Y: %1$.2f m/s^2</string>
    <string name="label_Az">Z: %1$.2f m/s^2</string>
    <string name="label_Mx">X: %1$.2f uT</string>
    <string name="label_My">Y: %1$.2f uT</string>
    <string name="label_Mz">Z:%1$.2f uT</string>
    <string name="label_P">Pressure: %1$.2f hPa</string>
    <string name="label_Gx">X: %1$.2f rad/s</string>
    <string name="label_Gy">Y: %1$.2f rad/s</string>
    <string name="label_Gz">Z: %1$.2f rad/s</string>
    <string name="label_L">Light Level: %1$.2f lux</string>

</resources>
