<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tiltspot.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/label_group"
        android:layout_width="300dp"
        android:layout_height="680dp"
        android:layout_margin="@dimen/base_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493">

        <!-- Labels -->

        <!-- Values -->

        <TextView
            android:id="@+id/label_Ax"
            style="@style/Label"
            android:layout_width="100dp"
            android:layout_height="24dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Ax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_Ay"
            style="@style/Label"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Ay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Ax" />

        <TextView
            android:id="@+id/label_Az"
            style="@style/Label"
            android:layout_width="100dp"
            android:layout_height="26dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Az"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Ay" />

        <TextView
            android:id="@+id/label_Mx"
            style="@style/Label"
            android:layout_width="85dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Mx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Geomagnetic Field" />

        <TextView
            android:id="@+id/label_My"
            style="@style/Label"
            android:layout_width="83dp"
            android:layout_height="27dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_My"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Mx" />

        <TextView
            android:id="@+id/label_Mz"
            style="@style/Label"
            android:layout_width="83dp"
            android:layout_height="27dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Mz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_My" />

        <TextView
            android:id="@+id/label_P"
            style="@style/Label"
            android:layout_width="127dp"
            android:layout_height="26dp"
            android:layout_marginTop="50dp"
            android:text="@string/label_P"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Mz" />

        <TextView
            android:id="@+id/label_Gx"
            style="@style/Label"
            android:layout_width="92dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Gx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Gyroscope" />

        <TextView
            android:id="@+id/label_Gy"
            style="@style/Label"
            android:layout_width="94dp"
            android:layout_height="25dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Gy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Gx" />

        <TextView
            android:id="@+id/label_Gz"
            style="@style/Label"
            android:layout_width="94dp"
            android:layout_height="26dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/label_Gz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Gy" />

        <TextView
            android:id="@+id/label_L"
            style="@style/Label"
            android:layout_width="129dp"
            android:layout_height="28dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/label_L"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Gz" />

        <EditText
            android:id="@+id/Accelerometer"
            android:layout_width="121dp"
            android:layout_height="23dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="91dp"
            android:layout_marginRight="91dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Gyroscope"
            android:layout_width="121dp"
            android:layout_height="23dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_P" />

        <EditText
            android:id="@+id/Geomagnetic Field"
            android:layout_width="139dp"
            android:layout_height="24dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="91dp"
            android:layout_marginRight="91dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_Az" />

    </android.support.constraint.ConstraintLayout>

    <!-- Four spot drawables for the cardinal directions on the device.
       The drawables are 100% black by default (in the XML). Alpha sets the
       "tint" to shades of gray. Setting the alpha to 0 here makes them
       invisible. -->

</android.support.constraint.ConstraintLayout>
